--- a/AsyncPoco/AsyncPoco.csproj
+++ b/AsyncPoco/AsyncPoco.csproj
@@ -2,12 +2,12 @@
 
 	<PropertyGroup>
 		<PackageId>AsyncPocoDpy</PackageId>
-		<Version>2.0.2</Version>
+		<Version>2.0.2.1</Version>
 		<TargetFrameworks>net45;netstandard1.3;netstandard2.0</TargetFrameworks>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<Authors>Dominik Pytlewski that forked work of Todd Menier that forked CollaboratingPlatypus/PetaPoco</Authors>
-		<Description>Fork of AsyncPoco with support for array based parameters</Description>
-		<Copyright>Copyright 2019 Dominik Pytlewski, Copyright 2018 Todd Menier</Copyright>
+		<Description>Fork of AsyncPoco with support for array based parameters in postgresql and sql server</Description>
+		<Copyright>Copyright 2021 Dominik Pytlewski, Copyright 2019 Todd Menier</Copyright>
 		<PackageProjectUrl>https://github.com/d-p-y/AsyncPoco</PackageProjectUrl>
 		<PackageLicenseUrl>https://raw.githubusercontent.com/d-p-y/AsyncPoco/LICENSE.txt</PackageLicenseUrl>
 		<PackageTags>orm micro-orm database sql async asynchronous netcore dotnetcore</PackageTags>
